--- a/C6-L01.html
+++ b/C6-L01.html
@@ -1743,7 +1743,7 @@ Figure&nbsp;104.8: Multivariate normal 50 point evenly spaced
 <span id="cb3-28"><a href="#cb3-28" aria-hidden="true" tabindex="-1"></a>pltaxes <span class="op">=</span> plt.gca() <span class="co"># make the plot</span></span>
 <span id="cb3-29"><a href="#cb3-29" aria-hidden="true" tabindex="-1"></a>output <span class="op">=</span> plt.title(<span class="st">"A draw from a Gaussian process with "</span> <span class="op">+</span> <span class="bu">str</span>(Nobs) <span class="op">+</span> <span class="st">" simulated data points"</span>) <span class="co"># make the plot</span></span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output cell-output-display">
-<div id="fig-demo-01-gp-draws-4" class="quarto-float quarto-figure quarto-figure-center anchored" width="580" height="431">
+<div id="fig-demo-01-gp-draws-4" class="quarto-float quarto-figure quarto-figure-center anchored" height="431" width="580">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-demo-01-gp-draws-4-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <a href="C6-L01_files/figure-html/fig-demo-01-gp-draws-4-output-1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-9" title="Figure&nbsp;104.9: "><img src="C6-L01_files/figure-html/fig-demo-01-gp-draws-4-output-1.png" id="fig-demo-01-gp-draws-4" width="580" height="431" class="figure-img"></a>
